--- a/composer.json
+++ b/composer.json
@@ -33,10 +33,13 @@
         "friendsofsymfony/user-bundle": "dev-master",
         "knplabs/knp-paginator-bundle": "^2.5",
         "symfony/assetic-bundle": "^2.7",
-        "gedmo/doctrine-extensions": "dev-master",
+        "gedmo/doctrine-extensions": "^2.4.30",
         "vich/uploader-bundle": "dev-master",
         "twig/extensions": "^1.3",
-        "javiereguiluz/easyadmin-bundle": "^1.17"
+        "javiereguiluz/easyadmin-bundle": "^1.17",
+        "jms/serializer-bundle": "^2.2",
+        "stof/doctrine-extensions-bundle": "^1.2",
+        "knplabs/knp-snappy-bundle": "^1.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
