--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,7 @@
         "khill/lavacharts": "^3.0",
         "simplesoftwareio/simple-qrcode": "~1",
         "league/csv": "^8.1",
-        "maatwebsite/excel": "~2.1.0",
-        "khill/lavacharts": "~3.1",
-        "consoletvs/charts": "5.*",
-        "muhamadrezaar/highcharts": "^1.0"
+        "maatwebsite/excel": "~2.1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
