--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "khill/lavacharts": "^3.0",
         "simplesoftwareio/simple-qrcode": "~1",
         "league/csv": "^8.1",
-        "maatwebsite/excel": "~2.1.0"
+        "maatwebsite/excel": "~2.1.0",
+        "muhamadrezaar/highcharts": "^1.0",
+        "consoletvs/charts": "^6.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
